--- a/Properties/Settings.settings
+++ b/Properties/Settings.settings
@@ -5,8 +5,8 @@
     <Setting Name="findItems" Type="System.Collections.Specialized.StringCollection" Scope="User">
       <Value Profile="(Default)">&lt;?xml version="1.0" encoding="utf-16"?&gt;
 &lt;ArrayOfString xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns:xsd="http://www.w3.org/2001/XMLSchema"&gt;
-  &lt;string&gt;'my dad'&lt;/string&gt;
-  &lt;string&gt;'my mom'&lt;/string&gt;
+  &lt;string&gt;item1&lt;/string&gt;
+  &lt;string&gt;item2&lt;/string&gt;
 &lt;/ArrayOfString&gt;</Value>
     </Setting>
     <Setting Name="triggers" Type="System.Collections.Specialized.StringCollection" Scope="User">
